--- a/templates/nutrition_diary.html
+++ b/templates/nutrition_diary.html
@@ -68,6 +68,7 @@
     </style>
 </head>
 <body>
+    {% include 'navbar.html' %}
 
     <div class="container">
         <h1>Nutrition Information</h1>
