Progress page implemented, docker compose adjusted

--- a/templates/nutrition_tracker.html
+++ b/templates/nutrition_tracker.html
@@ -106,7 +106,7 @@
         <h1>Nutrition Tracker</h1>
     </header>
 
-    
+    <a href="/progress">Track Weight Progress</a>
     
     
     <div class="container">
