--- a/templates/progress.html
+++ b/templates/progress.html
@@ -4,6 +4,15 @@
     <title>Weight Progress - FitWell Tracker</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Add the rest of your head section here, similar to your other HTML files -->
+
+
+    <style>
+        h1 {
+            color: #333;
+            text-align: center;
+        }
+
+    </style>
 </head>
 <body>
     {% include 'navbar.html' %}
