--- a/templates/signin.html
+++ b/templates/signin.html
@@ -23,6 +23,7 @@
 
         h1 {
             color: #333;
+            text-align: center;
         }
 
         input[type=text], input[type=password] {
