--- a/templates/add_lunch.html
+++ b/templates/add_lunch.html
@@ -122,10 +122,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav>
-        <a href="#" class="logo"> Nutrifit </a>
-        <ul>
-            <li><a href="{{ url_for('daily_intake')}}">Cancel</a></li>
-        </ul>
+        <a href="{{ url_for('daily_intake')}}">Cancel</a>
     </nav>
 
     <!-- Add Lunch Container -->
@@ -170,6 +167,10 @@
             {% endif %}
         </div>
     </section>
+
+    <footer>
+        <p>FitWell Tracker &copy; 2023</p>
+    </footer>
 </body>
 
 </html>
