--- a/templates/daily_intake.html
+++ b/templates/daily_intake.html
@@ -6,32 +6,22 @@
         body, html 
         {
             font-family: 'Poppins', sans-serif;
-            background: #f4f4f4;
+            background:  #c698c2;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
         }
 
 
         .add-container 
         {
-            max-width: 340px;
+            width: 100%;
             background-color: white;
             padding: 30px 40px;
             border-radius: 8px;
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
             margin: auto;
-        }
-
-        form 
-        {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            align-items: center;
         }
 
         h1 
@@ -43,32 +33,28 @@
     </style>
 </head>
 <body>
-
-
-    <nav>
-        <ul>
-            <li><a href="{{ url_for('landing')}}">Home</a></li>
-        </ul>
-    </nav>
-
+    {% include 'navbar.html' %}
 
     <div class="add-container">
         <h1>Daily Intake</h1>
-            
-     
-            <section style="text-align: center; margin: 30px 0;">
-            
-                
-                <a href="/add_breakfast">Add Breakfast</a>
-                <a href="/add_lunch">Add Lunch</a>
-                <a href="/add_dinner">Add Dinner</a>
-                <a href="/add_snack">Add Snack</a>
-               
-            </section>
+        <a href="/add_breakfast">
+            <button style="background-color: #c698c2; color: white;">Add Breakfast</button>
+        </a>
+        <a href="/add_lunch">
+            <button style="background-color: #c698c2; color: white;">Add Lunch</button>
+        </a>
+        <a href="/add_dinner">
+            <button style="background-color: #c698c2; color: white;">Add Dinner</button>
+        </a>
+        <a href="/add_snack">
+            <button style="background-color: #c698c2; color: white;">Add Snack</button>
+        </a>
     
     </div>
 
-
-   
+    <footer>
+        <p>FitWell Tracker &copy; 2023</p>
+    </footer>
+    
 </body>
 </html>
