--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -46,9 +46,11 @@
 </head>
 <body>
     <nav class="navbar">
+        <a href="/landing">Home</a>
         <a href="/nutrition_diary">Nutrition Search</a>
         <a href="/nutrition_tracker">Nutrition Tracker</a>
         <a href="/daily_intake">Log Meal</a>
+        <a href="/progress">Weight Progress</a>
         <form action="/signout" method="POST">
             <button type="submit" class="signout-button">Sign Out</button>
         </form>
