--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,6 +23,7 @@
 
         h1 {
             color: #333;
+            text-align: center;
         }
 
         input[type=text], input[type=date], input[type=number] {
