Weight Tracker Working

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,7 +48,7 @@
     <nav class="navbar">
         <a href="/nutrition_diary">Nutrition Search</a>
         <a href="/nutrition_tracker">Nutrition Tracker</a>
-        <a href="/daily_intake">Log Meal</a>
+        <a href="/progress">Track Weight</a>
         <form action="/signout" method="POST">
             <button type="submit" class="signout-button">Sign Out</button>
         </form>
